<?xml version="1.0"?>
<package format="2">
  <name>cpp_test</name>
  <version>0.0.0</version>
  <description>The cpp_test package</description>

  <maintainer email="mig@ipa.fhg.de">mig</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

</package>
