<?xml version="1.0"?>
<package format="2">
  <name>py_test</name>
  <version>0.0.0</version>
  <description>The py_test package</description>

  <maintainer email="mig@ipa.fhg.de">mig</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
